# DAQ-Technical-Assessment

./: .gitmodules  brainstorming.md
firmware/: CMakeLists.txt  Dockerfile  answer.txt
firmware/solution/: CMakeLists.txt  main.cpp
firmware/solution/include/: can_utils.hpp
firmware/solution/src/: can_utils.cpp
firmware/solution/tests/: test_sample.cpp
